--- a/main.html
+++ b/main.html
@@ -11,6 +11,34 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<main>
+		<div>
+			<h1>Shaw's News</h1>
+		</div>
+		<div class="container">
+			<div>
+				<h3>Latest News Articles</h3>
+				<ul>
+					<li>Article 1</li>
+					<li>Article 2</li>
+					<li>Article 3</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Main Article</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+			<div>
+				<h3>Pictorial News</h3>
+				<img src="#" alt="rain">
+				<img src="#" alt="politician">
+				<img src="#" alt="car">
+			</div>
+		</div>
+	</main>
+
 </body>
 
 </html>
