--- a/main.html
+++ b/main.html
@@ -11,10 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<main>
+	<header>
 		<div>
 			<h1>Shaw's News</h1>
 		</div>
+	</header>	
+	<main>
 		<div class="container">
 			<div>
 				<h3>Latest News Articles</h3>
@@ -30,7 +32,7 @@
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				</p>
 			</div>
-			<div>
+			<div class="pictorial-news-section">
 				<h3>Pictorial News</h3>
 				<img src="#" alt="rain">
 				<img src="#" alt="politician">
