--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 	</header>	
 	<main>
 		<div class="container">
-			<div>
+			<div class="latest-news-section">
 				<h3>Latest News Articles</h3>
 				<ul>
 					<li>Article 1</li>
